--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	  <title>Welcome  to Worldclass  DevOps Workshop </title>
+	  <title>Welcome  to Worldclass  DevOps Workshop by Anand_360489 </title>
 	   
   </head>
   <body bgcolor=white>
@@ -16,6 +16,7 @@
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup CI CD </p>
+    <p>This session is to demonstrate how to setup git and jenkins (Anand_360489) </p>
   </body>
 </html>
+
