Updating from Git to Demo git Pull

--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -16,7 +16,7 @@
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup git and jenkins (Anand_360489) </p>
+    <p>This session is to demonstrate how to setup git and jenkins (Anand_360489)(Change made From Git) </p>
   </body>
 </html>
 
